--- a/index.html
+++ b/index.html
@@ -30,5 +30,9 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://kit.fontawesome.com/ae4658c5bd.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
